rust/crates/spek/src/fft_backend/snapshots/spek__fft_backend__phastft__tests__signal_f32_4.snap
---
source: crates/spek/src/fft_backend/phastft.rs
expression: signal
---
[
    0.2709815,
    0.14039207,
    0.9799018,
    0.5933856,
]
