rust/crates/spek/src/fft_backend/snapshots/spek__fft_backend__phastft__tests__signal_f32_8.snap
---
source: crates/spek/src/fft_backend/phastft.rs
expression: signal
---
[
    0.2709815,
    0.14039207,
    0.9799018,
    0.5933856,
    0.61059517,
    0.94498706,
    0.9437634,
    0.017621636,
]
