rust/crates/spek/src/fft_backend/snapshots/spek__fft_backend__phastft__tests__signal_f64_4.snap
---
source: crates/spek/src/fft_backend/phastft.rs
expression: signal
---
[
    0.14039210841781025,
    0.5933855946594621,
    0.9449870985957316,
    0.017621638240237547,
]
