rust/crates/spek/src/fft_backend/snapshots/spek__fft_backend__phastft__tests__signal_f64_8.snap
---
source: crates/spek/src/fft_backend/phastft.rs
expression: signal
---
[
    0.14039210841781025,
    0.5933855946594621,
    0.9449870985957316,
    0.017621638240237547,
    0.14989197234234986,
    0.3432361072278808,
    0.33388863212697983,
    0.2339502334276513,
]
